--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="add_new_note">Add New Note</string>
     <string name="about_app">About App</string>
     <string name="edit_note">Edit Note</string>
+    <string name="no_data_to_clear">No data to clear !!</string>
+    <string name="ooooff">ooooff</string>
 
 </resources>
