strings and about app fragment changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="low">Low</string>
     <string name="high">High</string>
     <string name="notes_app">Notes App</string>
-    <string name="about_app_information">Notes App helps to:\n1.Achieve seemless productivity.\n2.Just note down anything anywhere you are .\n3.No need to worry about forgetting any important task.\n\nWarning  Please dont uninstall this app  otherwise youll lose your data  </string>
+    <string name="about_app_information">Notes App helps to:\n1.Achieve seemless productivity.\n2.Just note down anything anywhere you are .\n3.No need to worry about forgetting any important task.\nW͟a͟r͟n͟i͟n͟g͟ : P͟͟l͟͟e͟͟a͟͟s͟͟e͟͟ d͟͟o͟͟n͟͟t͟͟ u͟͟n͟͟i͟͟n͟͟s͟͟t͟͟a͟͟l͟͟l͟͟ t͟͟h͟͟i͟͟s͟͟ a͟͟p͟͟p͟͟  o͟͟t͟͟h͟͟e͟͟r͟͟w͟͟i͟͟s͟͟e͟͟ y͟͟o͟͟u͟͟l͟͟l͟͟ l͟͟o͟͟s͟͟e͟͟ y͟͟o͟͟u͟͟r͟͟ d͟͟a͟͟t͟͟a͟͟  </string>
     <string name="delete_note_warning">Are you sure that you want to\ndelete this note ?</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
